fix(web): fix text overflow in user and gourd profile name in activity

--- a/actor-apps/app-web/src/styles/sidebar.scss
+++ b/actor-apps/app-web/src/styles/sidebar.scss
@@ -4,6 +4,7 @@
   overflow: visible;
 
   width: $sidebar-width;
+  min-width: $sidebar-width;
   height: 100%;
 
   color: $sidebar-text-color;
